Fix updates in the legacy preview mode of the transform tool

BUG:438398